# pandaptable.moe-2.0

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  guvicorn_conf.py  pyproject.toml  requirements.txt
.github/: run-precommit.yml
.github/matchers/: check-json.json  check-toml.json  check-yaml.json
pandaptable.moe/: embed.json  index.html  style.css
src/: __main__.py  explod.js  gunicorn_conf.py  index.html  router.py  utils.py
templates/: contact.html  error.html  false.html  guild.html  site.html  true.html  user.html
website/: style.css
